--- a/main.html
+++ b/main.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script src="script.js " defer></script>
+<head>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <title>Better Instagram</title>
-  </head>
-  <body>
-    <h1 style="text-align: center">Arrange Images by drag and drop</h1>
+</head>
+<body>
+    <h1 style="text-align: center">Arrange Images by Drag and Drop</h1>
     <div class="flex" id="parent">
-      <div draggable="true" class="image" >Image 1</div>
-      <div draggable="true" class="image" >Image 2</div>
-      <div draggable="true" class="image" >Image 3</div>
-      <div draggable="true" class="image" >Image 4</div>
-      <div draggable="true" class="image" >Image 5</div>
-      <div draggable="true" class="image" >Image 6</div>
+        <div id="div1" class="image" draggable="true"></div>
+        <div id="div2" class="image" draggable="true"></div>
+        <div id="div3" class="image" draggable="true"></div>
+        <div id="div4" class="image" draggable="true"></div>
+        <div id="div5" class="image" draggable="true"></div>
+        <div id="div6" class="image" draggable="true"></div>
     </div>
-  </body>
+</body>
 </html>
